added 35 and 35 Client

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 /Zirpl.AppEngine.Core.Portable/bin
 /Zirpl.AppEngine.TinySolutions.Portable/obj
 /Zirpl.AppEngine.TinySolutions.Portable/bin
+/Zirpl.AppEngine.Core.35Client/obj
+/Zirpl.AppEngine.Core.35Client/bin
+/Zirpl.AppEngine.Core.35/obj
+/Zirpl.AppEngine.Core.35/bin
