--- a/Zirpl.AppEngine.Web.Net45/packages.config
+++ b/Zirpl.AppEngine.Web.Net45/packages.config
@@ -2,8 +2,20 @@
 <packages>
   <package id="Autofac" version="3.5.0" targetFramework="net45" />
   <package id="Autofac.Mvc5" version="3.3.0" targetFramework="net45" />
+  <package id="Common.Logging" version="2.0.0" targetFramework="net45" />
+  <package id="Common.Logging.Log4Net" version="2.0.1" targetFramework="net45" />
+  <package id="elmah" version="1.2.2" targetFramework="net45" />
+  <package id="elmah.corelibrary" version="1.2.2" targetFramework="net45" />
+  <package id="log4net" version="1.2.10" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.1.0" targetFramework="net45" />
+  <package id="Microsoft.Data.Edm" version="5.6.0" targetFramework="net45" />
+  <package id="Microsoft.Data.OData" version="5.6.0" targetFramework="net45" />
+  <package id="Microsoft.Data.Services.Client" version="5.6.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.8.0.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
+  <package id="System.Spatial" version="5.6.0" targetFramework="net45" />
+  <package id="WindowsAzure.Storage" version="4.0.1" targetFramework="net45" />
 </packages>
