--- a/Zirpl.AppEngine.Web/Zirpl.AppEngine.Web.csproj
+++ b/Zirpl.AppEngine.Web/Zirpl.AppEngine.Web.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{9B6C4DBA-94A5-4871-8FC5-A2BB2E91CC04}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Zirpl.AppEngine.Web</RootNamespace>
+    <RootNamespace>Zirpl.AppEngine</RootNamespace>
     <AssemblyName>Zirpl.AppEngine.Web</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -38,14 +38,57 @@
     <Reference Include="Autofac.Integration.Mvc">
       <HintPath>..\packages\Autofac.Mvc5.3.3.0\lib\net45\Autofac.Integration.Mvc.dll</HintPath>
     </Reference>
+    <Reference Include="Common.Logging, Version=2.0.0.0, Culture=neutral, PublicKeyToken=af08829b84f0328e, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Common.Logging.2.0.0\lib\2.0\Common.Logging.dll</HintPath>
+    </Reference>
+    <Reference Include="Common.Logging.Log4Net, Version=2.0.0.0, Culture=neutral, PublicKeyToken=af08829b84f0328e, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Common.Logging.Log4Net.2.0.1\lib\net20\Common.Logging.Log4Net.dll</HintPath>
+    </Reference>
+    <Reference Include="Elmah">
+      <HintPath>..\packages\elmah.corelibrary.1.2.2\lib\Elmah.dll</HintPath>
+    </Reference>
+    <Reference Include="log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\log4net.1.2.10\lib\2.0\log4net.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Data.Edm, Version=5.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <Private>True</Private>
+      <HintPath>..\packages\Microsoft.Data.Edm.5.6.0\lib\net40\Microsoft.Data.Edm.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Data.OData, Version=5.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <Private>True</Private>
+      <HintPath>..\packages\Microsoft.Data.OData.5.6.0\lib\net40\Microsoft.Data.OData.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Data.Services.Client">
+      <HintPath>..\packages\Microsoft.Data.Services.Client.5.6.0\lib\net40\Microsoft.Data.Services.Client.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.WindowsAzure.Configuration">
+      <HintPath>..\packages\Microsoft.WindowsAzure.ConfigurationManager.1.8.0.0\lib\net35-full\Microsoft.WindowsAzure.Configuration.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.WindowsAzure.Storage">
+      <HintPath>..\packages\WindowsAzure.Storage.4.0.1\lib\net40\Microsoft.WindowsAzure.Storage.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.5.0.6\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Spatial, Version=5.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <Private>True</Private>
+      <HintPath>..\packages\System.Spatial.5.6.0\lib\net40\System.Spatial.dll</HintPath>
+    </Reference>
     <Reference Include="System.Transactions" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -80,23 +123,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Membership\AspNetMembershipService.cs" />
-    <Compile Include="Membership\CurrentUserKeyProvider.cs" />
-    <Compile Include="Membership\RegisterUserException.cs" />
-    <Compile Include="Mvc\AjaxOnlyAttribute.cs" />
-    <Compile Include="Mvc\Html\HtmlUtilities.cs" />
-    <Compile Include="Mvc\Html\LinkUtilities.cs" />
-    <Compile Include="Mvc\Ioc\Autofac\IAutofacWebMvcDependencyResolver.cs" />
-    <Compile Include="Mvc\Ioc\Autofac\IocUtils.cs" />
-    <Compile Include="Mvc\Ioc\Autofac\WebDependencyResolver.cs" />
-    <Compile Include="Mvc\Ioc\IWebMvcDependencyResolver.cs" />
-    <Compile Include="Mvc\LogErrorAttribute.cs" />
-    <Compile Include="Mvc\RequiredIf.cs" />
-    <Compile Include="Mvc\Validation\RequiredTrueValidation.cs" />
-    <Compile Include="Mvc\ViewUtilities.cs" />
+    <Compile Include="Logging\Log4Net\WebRollingFileAppender.cs" />
+    <Compile Include="Web\Elmah\Azure\TableErrorEntity.cs" />
+    <Compile Include="Web\Elmah\Azure\TableErrorLog.cs" />
+    <Compile Include="Web\Elmah\Log4Net\ElmahAppender.cs" />
+    <Compile Include="Web\Membership\AspNetMembershipService.cs" />
+    <Compile Include="Web\Membership\CurrentUserKeyProvider.cs" />
+    <Compile Include="Web\Membership\RegisterUserException.cs" />
+    <Compile Include="Web\Mvc\AjaxOnlyAttribute.cs" />
+    <Compile Include="Web\Mvc\Html\HtmlUtilities.cs" />
+    <Compile Include="Web\Mvc\Html\LinkUtilities.cs" />
+    <Compile Include="Web\Mvc\Ioc\Autofac\IAutofacWebMvcDependencyResolver.cs" />
+    <Compile Include="Web\Mvc\Ioc\Autofac\IocUtils.cs" />
+    <Compile Include="Web\Mvc\Ioc\Autofac\WebDependencyResolver.cs" />
+    <Compile Include="Web\Mvc\Ioc\IWebMvcDependencyResolver.cs" />
+    <Compile Include="Web\Mvc\LogErrorAttribute.cs" />
+    <Compile Include="Web\Mvc\RequiredIf.cs" />
+    <Compile Include="Web\Mvc\Validation\RequiredTrueValidation.cs" />
+    <Compile Include="Web\Mvc\ViewUtilities.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WebContextDataProvider.cs" />
-    <Compile Include="WebUtilities.cs" />
+    <Compile Include="Web\WebContextDataProvider.cs" />
+    <Compile Include="Web\WebUtilities.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Zirpl.AppEngine\Zirpl.AppEngine.csproj">
@@ -107,6 +154,9 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="App_Readme\Elmah.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
