--- a/Zirpl.AppEngine.Net35/Zirpl.AppEngine.Net35.csproj
+++ b/Zirpl.AppEngine.Net35/Zirpl.AppEngine.Net35.csproj
@@ -478,6 +478,9 @@
     <Compile Include="..\Zirpl.AppEngine\Text\TextCrawling\TextPositionType.cs">
       <Link>Text\TextCrawling\TextPositionType.cs</Link>
     </Compile>
+    <Compile Include="..\Zirpl.AppEngine\Text\TextUtilities.cs">
+      <Link>Text\TextUtilities.cs</Link>
+    </Compile>
     <Compile Include="..\Zirpl.AppEngine\UnexpectedCaseException.cs">
       <Link>UnexpectedCaseException.cs</Link>
     </Compile>
@@ -499,9 +502,6 @@
     <Compile Include="..\Zirpl.AppEngine\Xml\Serialization\SerializationUtilities.cs">
       <Link>Xml\Serialization\SerializationUtilities.cs</Link>
     </Compile>
-    <Compile Include="..\Zirpl.AppEngine\_elsewhere\TextExtensions.cs">
-      <Link>_elsewhere\TextExtensions.cs</Link>
-    </Compile>
     <Compile Include="..\Zirpl.AppEngine\_old\ChangedValueDelegate.cs">
       <Link>_old\ChangedValueDelegate.cs</Link>
     </Compile>
@@ -522,10 +522,13 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="_elsewhere\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties ProjectLinkerExcludeFilter="\\?desktop(\\.*)?$;\\?silverlight(\\.*)?$;\.desktop;\.silverlight;\.xaml;^service references(\\.*)?$;\.clientconfig;^web references(\\.*)?$" ProjectLinkReference="dd9bcb12-748c-4395-9a8e-a599a60a0caa" />
+      <UserProperties ProjectLinkReference="dd9bcb12-748c-4395-9a8e-a599a60a0caa" ProjectLinkerExcludeFilter="\\?desktop(\\.*)?$;\\?silverlight(\\.*)?$;\.desktop;\.silverlight;\.xaml;^service references(\\.*)?$;\.clientconfig;^web references(\\.*)?$" />
     </VisualStudio>
   </ProjectExtensions>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
