--- a/Zirpl.AppEngine.Net40Client/Zirpl.AppEngine.Net40Client.csproj
+++ b/Zirpl.AppEngine.Net40Client/Zirpl.AppEngine.Net40Client.csproj
@@ -477,6 +477,9 @@
     <Compile Include="..\Zirpl.AppEngine\Text\TextCrawling\TextPositionType.cs">
       <Link>Text\TextCrawling\TextPositionType.cs</Link>
     </Compile>
+    <Compile Include="..\Zirpl.AppEngine\Text\TextUtilities.cs">
+      <Link>Text\TextUtilities.cs</Link>
+    </Compile>
     <Compile Include="..\Zirpl.AppEngine\UnexpectedCaseException.cs">
       <Link>UnexpectedCaseException.cs</Link>
     </Compile>
@@ -498,9 +501,6 @@
     <Compile Include="..\Zirpl.AppEngine\Xml\Serialization\SerializationUtilities.cs">
       <Link>Xml\Serialization\SerializationUtilities.cs</Link>
     </Compile>
-    <Compile Include="..\Zirpl.AppEngine\_elsewhere\TextExtensions.cs">
-      <Link>_elsewhere\TextExtensions.cs</Link>
-    </Compile>
     <Compile Include="..\Zirpl.AppEngine\_old\ChangedValueDelegate.cs">
       <Link>_old\ChangedValueDelegate.cs</Link>
     </Compile>
@@ -519,6 +519,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Transactions\" />
+    <Folder Include="_elsewhere\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -526,7 +527,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties ProjectLinkerExcludeFilter="\\?desktop(\\.*)?$;\\?silverlight(\\.*)?$;\.desktop;\.silverlight;\.xaml;^service references(\\.*)?$;\.clientconfig;^web references(\\.*)?$" ProjectLinkReference="dd9bcb12-748c-4395-9a8e-a599a60a0caa" />
+      <UserProperties ProjectLinkReference="dd9bcb12-748c-4395-9a8e-a599a60a0caa" ProjectLinkerExcludeFilter="\\?desktop(\\.*)?$;\\?silverlight(\\.*)?$;\.desktop;\.silverlight;\.xaml;^service references(\\.*)?$;\.clientconfig;^web references(\\.*)?$" />
     </VisualStudio>
   </ProjectExtensions>
   <Import Project="..\packages\AutoMapper.3.2.1\tools\AutoMapper.targets" Condition="Exists('..\packages\AutoMapper.3.2.1\tools\AutoMapper.targets')" />
