--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@
 /Zirpl.AppEngine.Silverlight/Bin
 /Zirpl.AppEngine.Silverlight/obj
 /Zirpl.AppEngine.v12.suo
+/Zirpl.AppEngine.Silverlight/Zirpl.AppEngine.Silverlight.csproj.user
