--- a/Zirpl.AppEngine.EntityFramework.Net45/Zirpl.AppEngine.EntityFramework.Net45.csproj
+++ b/Zirpl.AppEngine.EntityFramework.Net45/Zirpl.AppEngine.EntityFramework.Net45.csproj
@@ -127,6 +127,12 @@
     <Compile Include="..\Zirpl.AppEngine.EntityFramework\Model\EntityFramework\PersistableEntityBase.cs">
       <Link>Model\EntityFramework\PersistableEntityBase.cs</Link>
     </Compile>
+    <Compile Include="..\Zirpl.AppEngine.EntityFramework\Properties\AssemblyInfo.cs">
+      <Link>Properties\AssemblyInfo.cs</Link>
+    </Compile>
+    <Compile Include="..\Zirpl.AppEngine.EntityFramework\Properties\AssemblyInfo_common.cs">
+      <Link>Properties\AssemblyInfo_common.cs</Link>
+    </Compile>
     <Compile Include="..\Zirpl.AppEngine.EntityFramework\Service\EntityFramework\DbContextServiceBase.cs">
       <Link>Service\EntityFramework\DbContextServiceBase.cs</Link>
     </Compile>
@@ -145,7 +151,6 @@
     <Compile Include="..\Zirpl.AppEngine.EntityFramework\Validation\EntityFramework\ValidatorFactory.cs">
       <Link>Validation\EntityFramework\ValidatorFactory.cs</Link>
     </Compile>
-    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Zirpl.AppEngine.EntityFramework\App.config">
@@ -230,7 +235,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties ProjectLinkReference="b23590ec-7c8d-4bd4-bfee-77c0f0d821a7" ProjectLinkerExcludeFilter="\\?desktop(\\.*)?$;\\?silverlight(\\.*)?$;\.desktop;\.silverlight;\.xaml;^service references(\\.*)?$;\.clientconfig;^web references(\\.*)?$" />
+      <UserProperties ProjectLinkerExcludeFilter="\\?desktop(\\.*)?$;\\?silverlight(\\.*)?$;\.desktop;\.silverlight;\.xaml;^service references(\\.*)?$;\.clientconfig;^web references(\\.*)?$" ProjectLinkReference="b23590ec-7c8d-4bd4-bfee-77c0f0d821a7" />
     </VisualStudio>
   </ProjectExtensions>
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
