--- a/Zirpl.AppEngine.EntityFramework/Zirpl.AppEngine.EntityFramework.csproj
+++ b/Zirpl.AppEngine.EntityFramework/Zirpl.AppEngine.EntityFramework.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Model\EntityFramework\LinqExpressionSearchCriteria.cs" />
     <Compile Include="Model\EntityFramework\PersistableEntityBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\AssemblyInfo_common.cs" />
     <Compile Include="Service\EntityFramework\DbContextServiceBase.cs" />
     <Compile Include="Service\EntityFramework\DbContextUnitOfWork.cs" />
     <Compile Include="Service\EntityFramework\DbContextUnitOfWorkFactory.cs" />
