--- a/Zirpl.AppEngine.Net35/Zirpl.AppEngine.Net35.csproj
+++ b/Zirpl.AppEngine.Net35/Zirpl.AppEngine.Net35.csproj
@@ -297,6 +297,12 @@
     <Compile Include="..\Zirpl.AppEngine\NumberExtensions.cs">
       <Link>NumberExtensions.cs</Link>
     </Compile>
+    <Compile Include="..\Zirpl.AppEngine\Properties\AssemblyInfo.cs">
+      <Link>Properties\AssemblyInfo.cs</Link>
+    </Compile>
+    <Compile Include="..\Zirpl.AppEngine\Properties\AssemblyInfo_common.cs">
+      <Link>Properties\AssemblyInfo_common.cs</Link>
+    </Compile>
     <Compile Include="..\Zirpl.AppEngine\Reflection\AssemblyExtensions.cs">
       <Link>Reflection\AssemblyExtensions.cs</Link>
     </Compile>
@@ -516,8 +522,6 @@
     <Compile Include="..\Zirpl.AppEngine\_old\Singleton.cs">
       <Link>_old\Singleton.cs</Link>
     </Compile>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\AssemblyInfo_common.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="..\Zirpl.AppEngine\Linq\Dynamic Expressions.html">
@@ -531,7 +535,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties ProjectLinkReference="dd9bcb12-748c-4395-9a8e-a599a60a0caa" ProjectLinkerExcludeFilter="\\?desktop(\\.*)?$;\\?silverlight(\\.*)?$;\.desktop;\.silverlight;\.xaml;^service references(\\.*)?$;\.clientconfig;^web references(\\.*)?$" />
+      <UserProperties ProjectLinkerExcludeFilter="\\?desktop(\\.*)?$;\\?silverlight(\\.*)?$;\.desktop;\.silverlight;\.xaml;^service references(\\.*)?$;\.clientconfig;^web references(\\.*)?$" ProjectLinkReference="dd9bcb12-748c-4395-9a8e-a599a60a0caa" />
     </VisualStudio>
   </ProjectExtensions>
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
