--- a/Zirpl.AppEngine.Testing/Zirpl.AppEngine.Testing.csproj
+++ b/Zirpl.AppEngine.Testing/Zirpl.AppEngine.Testing.csproj
@@ -60,6 +60,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AssertionUtilities.cs" />
+    <Compile Include="Properties\AssemblyInfo_common.cs" />
     <Compile Include="UnitTestUtilities.cs" />
   </ItemGroup>
   <ItemGroup>
